# astropy-sphinx-theme

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/: dependabot.yml  release.yml
.github/workflows/: ci_workflow.yml  circleci-artifacts-redirector.yml  publish.yml  update-changelog.yaml
astropy_sphinx_theme/: __init__.py  astropy_unified.py  bootstrap_astropy.py
astropy_sphinx_theme/astropy-unified/: theme.toml
astropy_sphinx_theme/astropy-unified/static/css/: astropy.css
astropy_sphinx_theme/bootstrap-astropy/: layout.html  theme.conf
astropy_sphinx_theme/bootstrap-astropy/static/: bootstrap-astropy.css  copybutton.js  sidebar.js
astropy_sphinx_theme/tests/: test_basic.py
docs/: colors.rst  conf.py  index.rst
ska_sphinx_theme/: __init__.py
ska_sphinx_theme/bootstrap-ska/: layout.html  theme.conf
ska_sphinx_theme/tests/: test_basic.py
sphinx_astropy_theme/: __init__.py
