[build-system]
requires = [
    "setuptools>=80",
    "setuptools_scm[simple]>=8"
]
build-backend = 'setuptools.build_meta'

[project]
name = "astropy-sphinx-theme"
dynamic = ["version"]
description = "The sphinx theme for Astropy and affiliated packages."
readme = "README.rst"
license = "BSD-3-Clause"
license-files = ["LICENSE.rst"]
authors = [{name = "The Astropy Developers", email = "astropy.team@gmail.com"}]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
urls = {Homepage = "https://github.com/astropy/astropy-sphinx-theme"}
requires-python = ">=3.10"
dependencies = ["sphinx>6"]

[dependency-groups]
dev = [ { include-group = "test" } ]
test = [
    "pytest>=9",
    "packaging",
]
docs = [
    "sphinx",
]

# Keeping this around for backwards compat
[project.optional-dependencies]
test = [
    "packaging",
    "pytest>=9",
]
docs = [
    "sphinx",
]

[project.entry-points."sphinx.html_themes"]
"bootstrap-astropy" = "astropy_sphinx_theme.bootstrap_astropy"
"astropy-unified" = "astropy_sphinx_theme.astropy_unified"

[tool.setuptools.packages.find]
include = ["astropy_sphinx_theme*"]

[tool.pytest]
minversion = "9.0"
testpaths = ["astropy_sphinx_theme"]
xfail_strict = true
log_level = "INFO"
addopts = [
    "-ra",
    "--strict-config",
    "--strict-markers",
]
filterwarnings = ["error"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]

[tool.repo-review]
ignore = [
    "MY",  # No typing
    "PC140",  # No typing
    "PY007",  # No tox
    "PY005",  # I will put my test folder where I like, thank you.
    "PC111",  # I shall have not-black docs
    # TODO: Add docs
    "RTD",
]
