[metadata]
name = astropy-sphinx-theme
url = https://github.com/astropy/astropy-sphinx-theme
author = The Astropy Developers
author_email = astropy.team@gmail.com
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: Implementation :: CPython
license = BSD
description = The sphinx theme for Astropy and affiliated packages.
long_description = file: README.rst
long_description_content_type = text/x-rst

[options]
zip_safe = False
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    setuptools>=30.3.0

[options.extras_require]
test =
    packaging
    pytest
    sphinx

[options.packages.find]
exclude =
    tests

[options.package_data]
* = bootstrap-astropy/*, bootstrap-astropy/static/*

[options.entry_points]
sphinx.html_themes =
    bootstrap-astropy = astropy_sphinx_theme

[tool:pytest]
minversion = 4.6
testpaths = astropy_sphinx_theme
xfail_strict=true
filterwarnings =
    error

[flake8]
max-line-length = 100
